# ConquestConsole

./: BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: research---bug---analysis-related-to-lotr--conquest.md
injector/: injector.cpp
src/: audiohook.cpp  audiohook.h  bnkparser.cpp  bnkparser.h  config.h  d3d9hook.cpp  d3d9hook.h  debugrenderer.cpp  debugrenderer.h  dllmain.cpp  event_mapping.h  gamedata.cpp  gamedata.h  hash_dictionary.cpp  hash_dictionary.h  input.cpp  input.h
